<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/librosportada1"
        android:contentDescription="@string/app_name"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnregistrar"
        android:layout_gravity="center_horizontal"
        android:text="@string/str_btnregistrar"
        android:onClick="onClick"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnbuscar"
        android:layout_gravity="center_horizontal"
        android:text="@string/str_btnbuscar"
        android:onClick="onClick"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnlistar"
        android:layout_gravity="center_horizontal"
        android:text="@string/str_btnListar"
        android:onClick="onClick"
        />

</LinearLayout>